Fixed overflow css

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
   
 body {
 	line-height: 1;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 ol, ul {
